--- a/src/pages/DashboardPage/DashboardPage.module.scss
+++ b/src/pages/DashboardPage/DashboardPage.module.scss
@@ -1,9 +1,8 @@
 .page_grid_layout {
   display: grid;
   width: 100vw;
-  height: calc(100vh - 100px);
-  margin-top: 80px;
-  margin-bottom: 20px;
+  height: calc(100vh - 6em);
+  margin-top: 4.5em;
   grid-gap: 20px;
 
   grid-template-rows: auto 1fr;
